// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PdfGeneratorToggle /> tests > Should match the snapshot with a given args 1`] = `
<div>
  <button
    aria-controls="radix-_r_1_"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-secondary-foreground shadow-xs hover:bg-secondary/80 h-10 w-10 bg-color-red"
    data-state="closed"
    type="button"
  >
    <svg
      aria-label="Testing PDF"
      class="lucide lucide-image-down h-8 w-8 lg:h-10 lg:w-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.3 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10l-3.1-3.1a2 2 0 0 0-2.814.014L6 21"
      />
      <path
        d="m14 19 3 3v-5.5"
      />
      <path
        d="m17 22 3-3"
      />
      <circle
        cx="9"
        cy="9"
        r="2"
      />
    </svg>
    <span
      class="sr-only"
    >
      Testing PDF
    </span>
  </button>
</div>
`;

exports[`<PdfGeneratorToggle /> tests > Should match the snapshot with the default args 1`] = `
<div>
  <button
    aria-controls="radix-_r_0_"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow-sm hover:bg-primary/90 h-10 w-10"
    data-state="closed"
    type="button"
  >
    <svg
      aria-label="mocked title"
      class="lucide lucide-image-down h-8 w-8 lg:h-10 lg:w-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.3 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10l-3.1-3.1a2 2 0 0 0-2.814.014L6 21"
      />
      <path
        d="m14 19 3 3v-5.5"
      />
      <path
        d="m17 22 3-3"
      />
      <circle
        cx="9"
        cy="9"
        r="2"
      />
    </svg>
    <span
      class="sr-only"
    >
      mocked title
    </span>
  </button>
</div>
`;
